--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -31,6 +31,7 @@
         <module>ruoyi-common-sms</module>
         <module>ruoyi-common-logstash</module>
         <module>ruoyi-common-elasticsearch</module>
+        <module>ruoyi-common-sentinel</module>
     </modules>
 
     <artifactId>ruoyi-common</artifactId>
