--- a/config/dev/application-common.yml
+++ b/config/dev/application-common.yml
@@ -138,7 +138,7 @@ redisson:
 lock4j:
   # 获取分布式锁超时时间，默认为 3000 毫秒
   acquire-timeout: 3000
-  # 分布式锁的超时时间，默认为 30 毫秒
+  # 分布式锁的超时时间，默认为 30 秒
   expire: 30000
 
 # 暴露监控端点
