--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,8 @@
 
         <!-- 统一 guava 版本 解决隐式漏洞问题 -->
         <guava.version>31.1-jre</guava.version>
+        <!-- 临时修复 snakeyaml 漏洞 -->
+        <snakeyaml.version>1.31</snakeyaml.version>
 
         <!-- OSS 配置 -->
         <aws-java-sdk-s3.version>1.12.300</aws-java-sdk-s3.version>
@@ -302,6 +304,13 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
+            </dependency>
+
+            <!-- 临时修复 snakeyaml 漏洞 -->
+            <dependency>
+                <groupId>org.yaml</groupId>
+                <artifactId>snakeyaml</artifactId>
+                <version>${snakeyaml.version}</version>
             </dependency>
 
             <!-- 统一 fastjson 版本 解决alibaba组件序列化漏洞问题 -->
