update 更新 nacos 服务 增加统一依赖管理 避免包版本不一致问题

--- a/ruoyi-visual/ruoyi-nacos/pom.xml
+++ b/ruoyi-visual/ruoyi-nacos/pom.xml
@@ -30,6 +30,18 @@
         <nacos.version>2.1.1</nacos.version>
     </properties>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>io.springboot.nacos</groupId>
+                <artifactId>nacos-all</artifactId>
+                <version>${nacos.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         <dependency>
             <groupId>io.springboot.nacos</groupId>
