--- a/config/dev/application-common.yml
+++ b/config/dev/application-common.yml
@@ -170,7 +170,7 @@ sa-token:
   # token临时有效期 (指定时间无操作就过期) 单位: 秒
   activity-timeout: 1800
   # 开启内网服务调用鉴权
-  check-id-token: true
+  check-same-token: true
   # Id-Token的有效期 (单位: 秒)
   id-token-timeout: 600
   # 是否允许同一账号并发登录 (为true时允许一起登录, 为false时新登录挤掉旧登录)
