--- a/config/dev/seata-server.properties
+++ b/config/dev/seata-server.properties
@@ -30,6 +30,17 @@ store.db.queryLimit=100
 store.db.lockTable=lock_table
 store.db.maxWait=5000
 
+# redis \u6A21\u5F0F store.mode=redis \u5F00\u542F (\u63A7\u5236\u53F0\u67E5\u8BE2\u529F\u80FD\u6709\u9650,\u4E0D\u5F71\u54CD\u5B9E\u9645\u6267\u884C\u529F\u80FD)
+# store.redis.host=127.0.0.1
+# store.redis.port=6379
+# \u6700\u5927\u8FDE\u63A5\u6570
+# store.redis.maxConn=10
+# \u6700\u5C0F\u8FDE\u63A5\u6570
+# store.redis.minConn=1
+# store.redis.database=0
+# store.redis.password=
+# store.redis.queryLimit=100
+
 #Transaction rule configuration, only for the server
 server.recovery.committingRetryPeriod=1000
 server.recovery.asynCommittingRetryPeriod=1000
