--- a/config/dev/seata-server.properties
+++ b/config/dev/seata-server.properties
@@ -15,7 +15,7 @@ store.session.mode=db
 store.publicKey=
 
 #These configurations are required if the `store mode` is `db`. If `store.mode,store.lock.mode,store.session.mode` are not equal to `db`, you can remove the configuration block.
-store.db.datasource=druid
+store.db.datasource=hikari
 store.db.dbType=mysql
 store.db.driverClassName=com.mysql.cj.jdbc.Driver
 store.db.url=jdbc:mysql://127.0.0.1:3306/ry-seata?useUnicode=true&rewriteBatchedStatements=true
