--- a/ruoyi-visual/ruoyi-seata-server/pom.xml
+++ b/ruoyi-visual/ruoyi-seata-server/pom.xml
@@ -29,6 +29,7 @@
     <properties>
         <seata.version>1.5.2</seata.version>
         <jcommander.version>1.72</jcommander.version>
+        <druid.version>1.2.12</druid.version>
     </properties>
 
     <dependencyManagement>
