--- a/config/dev/ruoyi-resource.yml
+++ b/config/dev/ruoyi-resource.yml
@@ -6,16 +6,11 @@ spring:
       datasource:
         # 主库数据源
         master:
+          type: ${spring.datasource.type}
           driver-class-name: com.mysql.cj.jdbc.Driver
           url: ${datasource.system-master.url}
           username: ${datasource.system-master.username}
           password: ${datasource.system-master.password}
-        # 从库数据源
-        # slave:
-        #  driver-class-name:
-        #  url:
-        #  username:
-        #  password:
 
 mail:
   enabled: false
