--- a/config/dev/ruoyi-system.yml
+++ b/config/dev/ruoyi-system.yml
@@ -6,12 +6,14 @@ spring:
       datasource:
         # 主库数据源
         master:
+          type: ${spring.datasource.type}
           driver-class-name: com.mysql.cj.jdbc.Driver
           url: ${datasource.system-master.url}
           username: ${datasource.system-master.username}
           password: ${datasource.system-master.password}
         # 从库数据源
         # slave:
+        #  type: ${spring.datasource.type}
         #  driver-class-name:
         #  url:
         #  username:
