--- a/ruoyi-modules/ruoyi-job/src/main/resources/spy.properties
+++ b/ruoyi-modules/ruoyi-job/src/main/resources/spy.properties
@@ -1,28 +1,28 @@
-# p6spy \u6027\u80FD\u5206\u6790\u63D2\u4EF6\u914D\u7F6E\u6587\u4EF6
+# p6spy 性能分析插件配置文件
 modulelist=com.baomidou.mybatisplus.extension.p6spy.MybatisPlusLogFactory,com.p6spy.engine.outage.P6OutageFactory
-# \u81EA\u5B9A\u4E49\u65E5\u5FD7\u6253\u5370
+# 自定义日志打印
 logMessageFormat=com.baomidou.mybatisplus.extension.p6spy.P6SpyLogger
-#\u65E5\u5FD7\u8F93\u51FA\u5230\u63A7\u5236\u53F0
+#日志输出到控制台
 appender=com.baomidou.mybatisplus.extension.p6spy.StdoutLogger
-# \u4F7F\u7528\u65E5\u5FD7\u7CFB\u7EDF\u8BB0\u5F55 sql
+# 使用日志系统记录 sql
 #appender=com.p6spy.engine.spy.appender.Slf4JLogger
-# \u8BBE\u7F6E p6spy driver \u4EE3\u7406
+# 设置 p6spy driver 代理
 #deregisterdrivers=true
-# \u53D6\u6D88JDBC URL\u524D\u7F00
+# 取消JDBC URL前缀
 useprefix=true
-# \u914D\u7F6E\u8BB0\u5F55 Log \u4F8B\u5916,\u53EF\u53BB\u6389\u7684\u7ED3\u679C\u96C6\u6709error,info,batch,debug,statement,commit,rollback,result,resultset.
+# 配置记录 Log 例外,可去掉的结果集有error,info,batch,debug,statement,commit,rollback,result,resultset.
 excludecategories=info,debug,result,commit,resultset
-# \u65E5\u671F\u683C\u5F0F
+# 日期格式
 dateformat=yyyy-MM-dd HH:mm:ss
-# SQL\u8BED\u53E5\u6253\u5370\u65F6\u95F4\u683C\u5F0F
+# SQL语句打印时间格式
 databaseDialectTimestampFormat=yyyy-MM-dd HH:mm:ss
-# \u5B9E\u9645\u9A71\u52A8\u53EF\u591A\u4E2A
+# 实际驱动可多个
 #driverlist=org.h2.Driver
-# \u662F\u5426\u5F00\u542F\u6162SQL\u8BB0\u5F55
+# 是否开启慢SQL记录
 outagedetection=true
-# \u6162SQL\u8BB0\u5F55\u6807\u51C6 2 \u79D2
+# 慢SQL记录标准 2 秒
 outagedetectioninterval=2
-# \u662F\u5426\u8FC7\u6EE4 Log
+# 是否过滤 Log
 filter=true
-# \u8FC7\u6EE4 Log \u65F6\u6240\u6392\u9664\u7684 sql \u5173\u952E\u5B57\uFF0C\u4EE5\u9017\u53F7\u5206\u9694
-exclude: SELECT 1
+# 过滤 Log 时所排除的 sql 关键字，以逗号分隔
+exclude=SELECT 1
