fix 修复 seata-server.properties 配置文件乱码问题

--- a/config/dev/seata-server.properties
+++ b/config/dev/seata-server.properties
@@ -30,12 +30,12 @@ store.db.queryLimit=100
 store.db.lockTable=lock_table
 store.db.maxWait=5000
 
-# redis \u6A21\u5F0F store.mode=redis \u5F00\u542F (\u63A7\u5236\u53F0\u67E5\u8BE2\u529F\u80FD\u6709\u9650,\u4E0D\u5F71\u54CD\u5B9E\u9645\u6267\u884C\u529F\u80FD)
+# redis 模式 store.mode=redis 开启 (控制台查询功能有限,不影响实际执行功能)
 # store.redis.host=127.0.0.1
 # store.redis.port=6379
-# \u6700\u5927\u8FDE\u63A5\u6570
+# 最大连接数
 # store.redis.maxConn=10
-# \u6700\u5C0F\u8FDE\u63A5\u6570
+# 最小连接数
 # store.redis.minConn=1
 # store.redis.database=0
 # store.redis.password=
