update dubbo 3.1.0 => 3.1.2 修复众多问题

--- a/config/dev/application-common.yml
+++ b/config/dev/application-common.yml
@@ -26,6 +26,7 @@ dubbo:
       # APPLICATION_FIRST，智能决策接口级/应用级地址，双订阅
       # FORCE_APPLICATION，只消费应用级地址，如无地址则报错，单订阅 3.x 地址
       migration: FORCE_APPLICATION
+    qos-enable: false
   protocol:
     # 设置为 tri 即可使用 Triple 3.0 新协议
     # 性能对比 dubbo 协议并没有提升 但基于 http2 用于多语言异构等 http 交互场景
