add 新增 ruoyi-common-prometheus 模块 用于对接 prometheus 监控

--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -33,6 +33,7 @@
         <module>ruoyi-common-elasticsearch</module>
         <module>ruoyi-common-sentinel</module>
         <module>ruoyi-common-skylog</module>
+        <module>ruoyi-common-prometheus</module>
     </modules>
 
     <artifactId>ruoyi-common</artifactId>
