--- a/ruoyi-modules/pom.xml
+++ b/ruoyi-modules/pom.xml
@@ -40,6 +40,13 @@
 <!--            <groupId>com.ruoyi</groupId>-->
 <!--            <artifactId>ruoyi-common-skylog</artifactId>-->
 <!--        </dependency>-->
+
+        <!-- prometheus 监控 -->
+<!--        <dependency>-->
+<!--            <groupId>com.ruoyi</groupId>-->
+<!--            <artifactId>ruoyi-common-prometheus</artifactId>-->
+<!--        </dependency>-->
+
     </dependencies>
 
 </project>
