--- a/ruoyi-visual/pom.xml
+++ b/ruoyi-visual/pom.xml
@@ -35,6 +35,12 @@
 <!--            <groupId>com.ruoyi</groupId>-->
 <!--            <artifactId>ruoyi-common-skylog</artifactId>-->
 <!--        </dependency>-->
+
+        <!-- prometheus 监控 -->
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>ruoyi-common-prometheus</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
