add 新增 使用 mica-metrics 为 undertow 提供健康检查

--- a/ruoyi-common/ruoyi-common-web/pom.xml
+++ b/ruoyi-common/ruoyi-common-web/pom.xml
@@ -40,5 +40,11 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>net.dreamlu</groupId>
+            <artifactId>mica-metrics</artifactId>
+            <version>2.7.5</version>
+        </dependency>
+
     </dependencies>
 </project>
