优化Dockerfile创建目录命令
Signed-off-by: scmiot <scmiot@qq.com>

--- a/ruoyi-visual/ruoyi-seata-server/Dockerfile
+++ b/ruoyi-visual/ruoyi-seata-server/Dockerfile
@@ -2,8 +2,7 @@ FROM anapsix/alpine-java:8_server-jre_unlimited
 
 MAINTAINER Lion Li
 
-RUN mkdir -p /ruoyi/seata-server \
-    /ruoyi/seata-server/logs \
+RUN mkdir -p /ruoyi/seata-server/logs \    
     /ruoyi/skywalking/agent
 
 WORKDIR /ruoyi/seata-server
