--- a/ruoyi-modules/ruoyi-gen/Dockerfile
+++ b/ruoyi-modules/ruoyi-gen/Dockerfile
@@ -2,7 +2,7 @@ FROM anapsix/alpine-java:8_server-jre_unlimited
 
 MAINTAINER Lion Li
 
-RUN mkdir -p /ruoyi/gen /ruoyi/gen/logs
+RUN mkdir -p /ruoyi/gen/logs
 
 WORKDIR /ruoyi/gen
 
