--- a/ruoyi-modules/ruoyi-job/Dockerfile
+++ b/ruoyi-modules/ruoyi-job/Dockerfile
@@ -2,8 +2,7 @@ FROM anapsix/alpine-java:8_server-jre_unlimited
 
 MAINTAINER Lion Li
 
-RUN mkdir -p /ruoyi/job \
-    /ruoyi/job/logs \
+RUN mkdir -p /ruoyi/job/logs \    
     /ruoyi/job/temp \
     /ruoyi/skywalking/agent
 
