update 优化 重写字典查询 使用本地缓存优化网络开销 提升到上级实现减少rpc调用频率 使用流处理减少字符串操作

--- a/ruoyi-common/ruoyi-common-dict/pom.xml
+++ b/ruoyi-common/ruoyi-common-dict/pom.xml
@@ -33,6 +33,10 @@
             <artifactId>dubbo-spring-boot-starter</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-core</artifactId>
+        </dependency>
 
     </dependencies>
 </project>
