!63 减小腾讯短信引入jar包的体积 * 减小腾讯短信引入jar包的体积

--- a/ruoyi-example/ruoyi-demo/pom.xml
+++ b/ruoyi-example/ruoyi-demo/pom.xml
@@ -94,7 +94,7 @@
 
 <!--        <dependency>-->
 <!--            <groupId>com.tencentcloudapi</groupId>-->
-<!--            <artifactId>tencentcloud-sdk-java</artifactId>-->
+<!--            <artifactId>tencentcloud-sdk-java-sms</artifactId>-->
 <!--        </dependency>-->
 
         <dependency>
