--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
 
         <!-- SMS 配置 -->
         <aliyun.sms.version>2.0.22</aliyun.sms.version>
-        <tencent.sms.version>3.1.611</tencent.sms.version>
+        <tencent.sms.version>3.1.635</tencent.sms.version>
     </properties>
 
     <profiles>
@@ -313,7 +313,7 @@
 
             <dependency>
                 <groupId>com.tencentcloudapi</groupId>
-                <artifactId>tencentcloud-sdk-java</artifactId>
+                <artifactId>tencentcloud-sdk-java-sms</artifactId>
                 <version>${tencent.sms.version}</version>
             </dependency>
 
