--- a/ruoyi-modules/ruoyi-resource/pom.xml
+++ b/ruoyi-modules/ruoyi-resource/pom.xml
@@ -94,7 +94,7 @@
 
 <!--        <dependency>-->
 <!--            <groupId>com.tencentcloudapi</groupId>-->
-<!--            <artifactId>tencentcloud-sdk-java</artifactId>-->
+<!--            <artifactId>tencentcloud-sdk-java-sms</artifactId>-->
 <!--        </dependency>-->
 
         <dependency>
