update 优化 使用spring事件发布机制 重构登录日志与操作日志

--- a/ruoyi-auth/pom.xml
+++ b/ruoyi-auth/pom.xml
@@ -45,6 +45,12 @@
             <artifactId>ruoyi-common-security</artifactId>
         </dependency>
 
+        <!-- RuoYi Common Log -->
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>ruoyi-common-log</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.ruoyi</groupId>
             <artifactId>ruoyi-common-doc</artifactId>
