--- a/ruoyi-visual/ruoyi-nacos/src/main/resources/application.properties
+++ b/ruoyi-visual/ruoyi-nacos/src/main/resources/application.properties
@@ -31,8 +31,9 @@ server.error.include-message=ON_PARAM
 
 spring.application.name=ruoyi-nacos
 #*************** Config Module Related Configurations ***************#
-### If use MySQL as datasource:
-spring.datasource.platform=mysql
+### Deprecated configuration property, it is recommended to use `spring.sql.init.platform` replaced.
+spring.sql.init.platform=mysql
+nacos.plugin.datasource.log.enabled=true
 
 ### Count of DB:
 db.num=1
@@ -139,6 +140,8 @@ nacos.core.auth.plugin.nacos.token.secret.key=SecretKey0123456789012345678901234
 #nacos.core.auth.ldap.userDn=cn=admin,${nacos.core.auth.ldap.basedc}
 #nacos.core.auth.ldap.password=admin
 #nacos.core.auth.ldap.userdn=cn={0},dc=example,dc=org
+#nacos.core.auth.ldap.filter.prefix=uid
+#nacos.core.auth.ldap.case.sensitive=true
 
 
 #*************** Istio Related Configurations ***************#
@@ -189,4 +192,5 @@ nacos.istio.mcp.server.enabled=false
 # nacos.core.protocol.raft.data.read_index_type=ReadOnlySafe
 ### rpc request timeout, default 5 seconds
 # nacos.core.protocol.raft.data.rpc_request_timeout_ms=5000
-
+### enable to support prometheus service discovery
+#nacos.prometheus.metrics.enabled=true
