--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,6 @@
         <p6spy.version>3.9.1</p6spy.version>
         <dynamic-ds.version>3.5.2</dynamic-ds.version>
         <velocity.version>2.3</velocity.version>
-        <fastjson.version>1.2.83</fastjson.version>
         <swagger.core.version>2.2.7</swagger.core.version>
         <springdoc.version>1.6.14</springdoc.version>
         <poi.version>5.2.3</poi.version>
@@ -42,8 +41,12 @@
         <elasticsearch.version>7.14.0</elasticsearch.version>
         <skywalking-toolkit.version>8.13.0</skywalking-toolkit.version>
 
-        <!-- 统一 guava 版本 解决隐式漏洞问题 -->
-        <guava.version>31.1-jre</guava.version>
+        <!-- alibaba 相关依赖 -->
+        <sentinel.version>1.8.6</sentinel.version>
+        <seata.version>1.6.0</seata.version>
+        <nacos.version>2.2.0</nacos.version>
+        <dubbo.version>3.1.3</dubbo.version>
+
         <!-- 临时修复 snakeyaml 漏洞 -->
         <snakeyaml.version>1.33</snakeyaml.version>
 
@@ -332,25 +335,11 @@
                 <version>${tencent.sms.version}</version>
             </dependency>
 
-            <!-- 统一 guava 版本 解决隐式漏洞问题 -->
-            <dependency>
-                <groupId>com.google.guava</groupId>
-                <artifactId>guava</artifactId>
-                <version>${guava.version}</version>
-            </dependency>
-
             <!-- 临时修复 snakeyaml 漏洞 -->
             <dependency>
                 <groupId>org.yaml</groupId>
                 <artifactId>snakeyaml</artifactId>
                 <version>${snakeyaml.version}</version>
-            </dependency>
-
-            <!-- 统一 fastjson 版本 解决alibaba组件序列化漏洞问题 -->
-            <dependency>
-                <groupId>com.alibaba</groupId>
-                <artifactId>fastjson</artifactId>
-                <version>${fastjson.version}</version>
             </dependency>
 
         </dependencies>
