--- a/config/nacos/application-common.yml
+++ b/config/nacos/application-common.yml
@@ -255,6 +255,11 @@ swagger:
   service-mapping:
     ruoyi-gen: /code
 
+springdoc:
+  swagger-ui:
+    # 持久化认证数据
+    persistAuthorization: true
+
 # seata配置
 seata:
   # 默认关闭，如需启用spring.datasource.dynami.seata需要同时开启
