--- a/pom.xml
+++ b/pom.xml
@@ -41,14 +41,10 @@
         <elasticsearch.version>7.14.0</elasticsearch.version>
         <skywalking-toolkit.version>8.13.0</skywalking-toolkit.version>
 
-        <!-- alibaba 相关依赖 -->
-        <sentinel.version>1.8.6</sentinel.version>
-        <seata.version>1.6.1</seata.version>
-        <nacos.version>2.2.0</nacos.version>
-        <dubbo.version>3.1.3</dubbo.version>
-
         <!-- 临时修复 snakeyaml 漏洞 -->
         <snakeyaml.version>1.33</snakeyaml.version>
+        <!-- 临时修复 fastjson 漏洞 -->
+        <fastjson.version>1.2.83</fastjson.version>
 
         <!-- OSS 配置 -->
         <aws-java-sdk-s3.version>1.12.349</aws-java-sdk-s3.version>
@@ -340,6 +336,12 @@
                 <groupId>org.yaml</groupId>
                 <artifactId>snakeyaml</artifactId>
                 <version>${snakeyaml.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
             </dependency>
 
         </dependencies>
