--- a/ruoyi-visual/ruoyi-seata-server/pom.xml
+++ b/ruoyi-visual/ruoyi-seata-server/pom.xml
@@ -27,6 +27,7 @@
     <packaging>jar</packaging>
 
     <properties>
+        <seata.version>1.6.1</seata.version>
         <jcommander.version>1.72</jcommander.version>
         <druid.version>1.2.12</druid.version>
     </properties>
