--- a/config/nacos/datasource.yml
+++ b/config/nacos/datasource.yml
@@ -13,6 +13,14 @@ datasource:
     url: jdbc:mysql://localhost:3306/ry-job?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8&rewriteBatchedStatements=true
     username: root
     password: password
+#  system-oracle:
+#    url: jdbc:oracle:thin:@//localhost:1521/XE
+#    username: ROOT
+#    password: password
+#  system-postgres:
+#    url: jdbc:postgresql://localhost:5432/postgres?useUnicode=true&characterEncoding=utf8&useSSL=true&autoReconnect=true&reWriteBatchedInserts=true
+#    username: root
+#    password: password
 
 spring:
   datasource:
