add 增加 GET 请求提交日期参数 默认格式化配置

--- a/config/nacos/application-common.yml
+++ b/config/nacos/application-common.yml
@@ -74,6 +74,9 @@ spring:
       max-request-size: 20MB
       # 上传单个文件大小限制
       max-file-size: 10MB
+  mvc:
+    format:
+      date-time: yyyy-MM-dd HH:mm:ss
   #jackson配置
   jackson:
     # 日期格式化
