--- a/config/nacos/ruoyi-system.yml
+++ b/config/nacos/ruoyi-system.yml
@@ -23,5 +23,5 @@ spring:
 #          type: ${spring.datasource.type}
 #          driverClassName: org.postgresql.Driver
 #          url: ${datasource.system-postgres.url}
-#          username: ${datasource.system-postgres.url}
-#          password: ${datasource.system-postgres.url}
+#          username: ${datasource.system-postgres.username}
+#          password: ${datasource.system-postgres.password}
