fix 修复 gateway 流控规则生效但不显示问题

--- a/config/nacos/ruoyi-gateway.yml
+++ b/config/nacos/ruoyi-gateway.yml
@@ -97,4 +97,4 @@ spring:
             groupId: ${spring.cloud.nacos.config.group}
             namespace: ${spring.profiles.active}
             data-type: json
-            rule-type: flow
+            rule-type: gw-flow
