update 优化 gateway 对接 sentinel 使用网关特定模式

--- a/config/nacos/ruoyi-gateway.yml
+++ b/config/nacos/ruoyi-gateway.yml
@@ -88,6 +88,8 @@ spring:
 
     # sentinel 配置
     sentinel:
+      filter:
+        enabled: false
       # nacos配置持久化
       datasource:
         ds1:
