--- a/ruoyi-visual/ruoyi-xxl-job-admin/pom.xml
+++ b/ruoyi-visual/ruoyi-xxl-job-admin/pom.xml
@@ -71,8 +71,8 @@
 
 		<!-- xxl-job-core -->
 		<dependency>
-			<groupId>com.xuxueli</groupId>
-			<artifactId>xxl-job-core</artifactId>
+			<groupId>com.ruoyi</groupId>
+			<artifactId>ruoyi-common-job</artifactId>
 		</dependency>
 
 	</dependencies>
