update 优化 转移 logback-common 配置到 common-web 模块 gateway 单独处理

--- a/ruoyi-visual/ruoyi-sentinel-dashboard/pom.xml
+++ b/ruoyi-visual/ruoyi-sentinel-dashboard/pom.xml
@@ -53,8 +53,8 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>ruoyi-common-web</artifactId>
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.logging.log4j</groupId>
@@ -94,11 +94,6 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.ruoyi</groupId>
-            <artifactId>ruoyi-common-core</artifactId>
         </dependency>
 
     </dependencies>
