--- a/config/nacos/application-common.yml
+++ b/config/nacos/application-common.yml
@@ -232,8 +232,6 @@ mybatis-plus:
 
 # swagger配置
 swagger:
-  # 是否开启swagger
-  enabled: true
   info:
     # 标题
     title: '标题：RuoYi-Cloud-Plus微服务权限管理系统_接口文档'
@@ -259,6 +257,9 @@ swagger:
     ruoyi-gen: /code
 
 springdoc:
+  api-docs:
+    # 是否开启接口文档
+    enabled: true
   swagger-ui:
     # 持久化认证数据
     persistAuthorization: true
