fix 修复 zookeeper 自带控制台开关类型错误问题

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -397,7 +397,7 @@ services:
       ZOO_SERVER_ID: 1
       ZOO_PORT_NUMBER: 2181
       # 自带的控制台 一般用不上可自行开启
-      ZOO_ENABLE_ADMIN_SERVER: no
+      ZOO_ENABLE_ADMIN_SERVER: "no"
       # 自带控制台的端口
       ZOO_ADMIN_SERVER_PORT_NUMBER: 8080
     network_mode: "host"
