add 新增 通用翻译模块 ruoyi-common-translation 实现(部门名、字典、oss、用户名)

--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -34,6 +34,7 @@
         <module>ruoyi-common-sentinel</module>
         <module>ruoyi-common-skylog</module>
         <module>ruoyi-common-prometheus</module>
+        <module>ruoyi-common-translation</module>
     </modules>
 
     <artifactId>ruoyi-common</artifactId>
