add 新增 数据加解密模块 ruoyi-common-encrypt

--- a/config/nacos/application-common.yml
+++ b/config/nacos/application-common.yml
@@ -230,6 +230,20 @@ mybatis-plus:
       updateStrategy: NOT_NULL
       where-strategy: NOT_NULL
 
+# 数据加密
+mybatis-encryptor:
+  # 是否开启加密
+  enable: false
+  # 默认加密算法
+  algorithm: BASE64
+  # 编码方式 BASE64/HEX。默认BASE64
+  encode: BASE64
+  # 安全秘钥 对称算法的秘钥 如：AES，SM4
+  password:
+  # 公私钥 非对称算法的公私钥 如：SM2，RSA
+  publicKey:
+  privateKey:
+
 # swagger配置
 swagger:
   info:
