--- a/config/nacos/datasource.yml
+++ b/config/nacos/datasource.yml
@@ -48,6 +48,8 @@ spring:
         maxLifetime: 1800000
         # 连接测试query（配置检测连接是否有效）
         connectionTestQuery: SELECT 1
+        # 多久检查一次连接的活性
+        keepaliveTime: 30000
 
 # seata配置
 seata:
