--- a/ruoyi-common/ruoyi-common-loadbalancer/pom.xml
+++ b/ruoyi-common/ruoyi-common-loadbalancer/pom.xml
@@ -31,5 +31,10 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>ruoyi-common-core</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
