--- a/ruoyi-visual/ruoyi-xxl-job-admin/src/main/resources/application.yml
+++ b/ruoyi-visual/ruoyi-xxl-job-admin/src/main/resources/application.yml
@@ -25,6 +25,9 @@ spring:
     suffix: .ftl
     templateLoaderPath: classpath:/templates/
 
+logging:
+  config: classpath:logback-plus.xml
+
 --- # nacos 配置
 spring:
   cloud:
