update 优化 skywalking-agent 探针日志等级调整为 WARN 减少无用日志输出

--- a/docker/skywalking/agent/config/agent.config
+++ b/docker/skywalking/agent/config/agent.config
@@ -114,7 +114,7 @@ collector.get_agent_dynamic_config_interval=${SW_AGENT_COLLECTOR_GET_AGENT_DYNAM
 collector.is_resolve_dns_periodically=${SW_AGENT_COLLECTOR_IS_RESOLVE_DNS_PERIODICALLY:false}
 
 # Logging level
-logging.level=${SW_LOGGING_LEVEL:INFO}
+logging.level=${SW_LOGGING_LEVEL:WARN}
 # Logging file_name
 logging.file_name=${SW_LOGGING_FILE_NAME:skywalking-api.log}
 # Log output. Default is FILE. Use CONSOLE means output to stdout.
