--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -36,6 +36,7 @@
         <module>ruoyi-common-prometheus</module>
         <module>ruoyi-common-translation</module>
         <module>ruoyi-common-encrypt</module>
+        <module>ruoyi-common-tenant</module>
     </modules>
 
     <artifactId>ruoyi-common</artifactId>
